# CodingGameServer-OldDoNotUse

./: .gitignore  CMakeLists.txt  Protocol.txt  README.md  runCGS.py
CGS/: BaseClass.py  CGS.py  Comments.py  Constants.py  Game.py  Logger.py  Logging.txt  Player.py  PlayerSocket.py  Protocol.txt  RegularPlayer.py  Tournament.py  TournamentMode.py  WebSocketBase.py  Webserver.py
CGS/Player/: Player.py  PlayerSocket.py  RegularPlayer.py  __init__.py
CGS/Tournament/: League.py  PoolKnockout.py  SingleElimination.py  Tournament.py  __init__.py
CGS/templates/: Game.html  base.html  error404.html  index.html  new_game.html  new_tournament.html  noTournament.html  style.css  tournament.html
GameAPI/: GameAPI.c  GameAPI.h  labyrinthAPI.c  ret_type.h
Labyrinth/: CMakeLists.txt  make_distrib  runLabyrinth.py
Labyrinth/API/: labyrinthAPI.c  labyrinthAPI.h
Labyrinth/doc/: enonce.tex
Labyrinth/server/: AstarPlayer.py  Constants.py  DoNothingPlayer.py  Labyrinth.py  PlayRandomPlayer.py  runLabyrinth.py
Labyrinth/src/: CMakeLists.txt  DoNothing.c  Q1.c  THlaby.c  mainbaby.c  template
Labyrinth/templates/: index.html
babyLaby/: Q1.c  mainbaby.c
clientAPI/: GameAPI.c  labyrinthAPI.c  labyrinthAPI.h
clientAPI/C/: clientAPI.c  clientAPI.h  ret_type.h
doc/: Logging.md  Protocol.md  coding_style.md  coding_style.txt
games/Labyrinth/: __init__.py  make_distrib
server/: BaseClass.py  CGS.py  Comments.py  Constants.py  Game.py  Labyrinth.py  Logger.py  Player.py  PlayerSocket.py  Webserver.py  server.py  sockerPlayer.py  socketPlayer.py  webserver.py
(+73 files in other folders)
